--- a/appSettings.json
+++ b/appSettings.json
@@ -1,6 +1,6 @@
 {
     "name": "Karla",
-    "version": "0.0.0.1",
+    "version": "0.5.1",
     "host": "0.0.0.0",
     "port": 8004,
     "dbDriver": "postgres",
@@ -13,5 +13,6 @@
     "allowCommit": true,
     "allowMultiThreading": true,
     "allowCORS": true,
-    "allowDB": false
+    "allowDB": false,
+    "licenseCode": ""
 }
