--- a/appSettings.json
+++ b/appSettings.json
@@ -1,7 +1,7 @@
 {
     "allowCORS": true,
     "allowCommit": true,
-    "allowDB": false,
+    "allowDB": true,
     "allowDebug": true,
     "allowMultiThreading": true,
     "dbDriver": "postgres",
